# pnl-core-rs

./: .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/pnl-cli/: Cargo.toml
crates/pnl-cli/src/: input.rs  main.rs  replay_loader.rs
crates/pnl-cli/src/input/: config.rs  event_decode.rs  events.rs  instruments.rs
crates/pnl-core/: Cargo.toml
crates/pnl-core/benches/: PERF_BASELINES.md  engine.rs
crates/pnl-core/examples/: embedding_service.rs
crates/pnl-core/src/: account.rs  account_metrics.rs  accounting.rs  config.rs  corporate_actions.rs  engine.rs  error.rs  event.rs  lib.rs  metadata.rs  position.rs  registry.rs  replay_journal.rs  snapshot.rs  state_hash.rs  summary.rs  types.rs  valuation.rs
crates/pnl-core/src/accounting/: average_cost.rs  fill.rs  lots.rs  mod.rs
crates/pnl-core/src/engine/: event_application.rs
crates/pnl-core/src/snapshot/: canonical.rs  codec.rs  validation.rs
crates/pnl-core/tests/: goldens.rs  support.rs  v1.rs
crates/pnl-core/tests/goldens/: v1_representative.pnlsnap  v1_representative.snapshot.json  v1_representative.state_hash  v2_average_cost_representative.pnlsnap  v2_average_cost_representative.snapshot.json  v2_average_cost_representative.state_hash  v2_fifo_representative.pnlsnap  v2_fifo_representative.snapshot.json  v2_fifo_representative.state_hash  v2_lifo_representative.pnlsnap  v2_lifo_representative.snapshot.json  v2_lifo_representative.state_hash
docs/: replay-event-schema.md
fixtures/: config.toml  events.ndjson  instruments.csv
