[workspace]
members = ["crates/pnl-core", "crates/pnl-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/erik-kroon/pnl-core-rs"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
csv = "1.3"
postcard = { version = "1.0", features = ["alloc"] }
proptest = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
