[package]
name = "pnl-cli"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "pnl-core"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
csv.workspace = true
pnl-core = { path = "../pnl-core" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
